# trading-algorithmique

./: .gitignore  pyproject.toml
configs/: default.yaml
data/samples/: sample.csv  sample_datetime.csv
scripts/: build_timeframes.py  diagnostic_filter.py  fetch_mt5_step200.py
src/: main.py
src/trading/backtesting/: engine.py
src/trading/data/: loader.py  resample.py
src/trading/evaluation/: metrics.py
src/trading/features/: align.py  indicators.py  regime.py  volatility.py
src/trading/ingestion/: mt5_fetch.py
src/trading/risk/: manager.py
src/trading/utils/: config.py
src/trading_algorithmique.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
